--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background-color: lightgrey;
+  background-color: rgba(250,250,250,255) !important;
 }
 
 a {
@@ -50,7 +50,6 @@ li.selected {
   flex-shrink: 0;
   min-width: 200px;
   margin-top: 78px;
-  margin-left: 3%;
 }
 
 .closet {
@@ -104,7 +103,127 @@ li > a {
   font-size: 0.9rem;
 }
 
+.weather {
+  width: 300px;
+  border-radius: 6px;
+  /* background-color: #f5f5f5; */
+  margin: 20px auto 0 auto;
+  padding: 0px 20px 20px 20px;
+}
 
+.top, 
+.bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.city {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1;
+  margin: 0;
+  letter-spacing: 1px;
+  color: black;
+}
+
+.weather-description {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1;
+  margin-top: 0;
+}
+
+.weather-icon {
+  width: 100px;
+}
+
+.temperature {
+  font-weight: 600;
+  font-size: 70px;
+  width: auto;
+  letter-spacing: -5px;
+  margin: 10px 0;
+  color: black;
+}
+
+.details {
+  width: 100%;
+  padding-left: 20px;
+  color: #666666;
+}
+
+.parameter-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.parameter-label {
+  text-align: left;
+  font-weight: 400;
+  font-size: 12px;
+}
+
+.parameter-value {
+  text-align: right;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+
+/* forecast */
+.title {
+  font-size: 23px;
+  font-weight: 600;
+}
+
+.daily-item {
+  background-color: #f5f5f5;
+  border-radius: 15px;
+  height: 40px;
+  margin: 5px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 5px 20px;
+}
+
+.icon-small {
+  width: 40px;
+}
+
+.day {
+  color: #212121;
+  flex: 1 1;
+  font-weight: 600;
+  margin-left: 15px;
+}
+
+.description {
+  flex: 1 1;
+  margin-right: 15px;
+  text-align: right;
+}
+
+.daily-details-grid {
+  grid-row-gap: 0;
+  grid-column-gap: 15px;
+  row-gap: 0;
+  column-gap: 15px;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1;
+  grid-template-columns: auto auto;
+  padding: 5px 15px;
+}
+
+.daily-details-grid-item {
+  display: flex;
+  height: 30px;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+}
 
 
 
