--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,7 @@ a {
 
 a:hover {
   text-decoration: underline;
+  color: black;
 }
 
 /* label {
@@ -90,6 +91,11 @@ li.selected {
   flex-direction: column;
   align-items: center;
 }
+
+.ootdChildContainer-1 > img,
+.ootdChildContainer-2 > img {
+  cursor: pointer;
+} 
 
 p {
   margin-bottom: 0;
@@ -325,7 +331,7 @@ html {
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   color: #1c1c1c;
-  font-weight: 600;
+  /* font-weight: 600; */
   font-family: "Unna", serif;
 }
 
@@ -337,12 +343,12 @@ h1, .h1 {
 h2, .h2 {
   font-size: 32px;
   line-height: 36px;
-  font-weight: 700;
+  /* font-weight: 700; */
 }
 
 h3, .h3 {
   font-size: 24px;
-  font-weight: 700;
+  /* font-weight: 700; */
 }
 
 h4, .h4 {
