--- a/public/style.css
+++ b/public/style.css
@@ -53,6 +53,29 @@ li.selected {
   margin-top: 78px;
 }
 
+.brand-search {
+  /* align-items: center; */
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  cursor: default;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* -webkit-box-pack: justify; */
+  /* justify-content: space-between; */
+  min-height: 38px;
+  outline: 0!important;
+  position: relative;
+  transition: all 100ms;
+  width: 100%;
+  margin: auto;
+  display: block;
+  padding: 8px 2px;
+  box-sizing: border-box;
+}
+
 .closet {
   width: 65%;
   flex-shrink: 1;
