--- a/public/style.css
+++ b/public/style.css
@@ -8,10 +8,10 @@ a {
   color: black;
 }
 
-a:hover {
+/* a:hover {
   text-decoration: underline;
   color: black;
-}
+} */
 
 /* label {
   display: block;
@@ -54,17 +54,12 @@ li.selected {
 }
 
 .brand-search {
-  /* align-items: center; */
   background-color: hsl(0, 0%, 100%);
   border-color: hsl(0, 0%, 80%);
   border-radius: 4px;
   border-style: solid;
   border-width: 1px;
   cursor: default;
-  /* display: flex; */
-  /* flex-wrap: wrap; */
-  /* -webkit-box-pack: justify; */
-  /* justify-content: space-between; */
   min-height: 38px;
   outline: 0!important;
   position: relative;
@@ -72,8 +67,12 @@ li.selected {
   width: 100%;
   margin: auto;
   display: block;
-  padding: 8px 2px;
+  padding: 6px 10px;
   box-sizing: border-box;
+}
+
+.brand-list {
+  margin-top: 2rem;
 }
 
 .closet {
@@ -120,6 +119,10 @@ li.selected {
   cursor: pointer;
 } 
 
+.look > p {
+  font-size: 0.9rem;
+}
+
 p {
   margin-bottom: 0;
 }
@@ -130,6 +133,33 @@ p {
 
 li > a {
   font-size: 0.9rem;
+}
+
+#nav:hover {
+  text-decoration: underline;
+}
+
+input, textarea, select {
+  font-size: 0.9rem;
+}
+
+select {
+  padding: 3px 0;
+  width: 80%;
+  display: block;
+  margin: 0 auto;
+}
+
+.ul-look {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  justify-content: flex-start;
+  padding-right: 32px;
+}
+
+.inner-look > img {
+  cursor: auto;
 }
 
 .weather {
@@ -190,13 +220,13 @@ li > a {
 .parameter-label {
   text-align: left;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .parameter-value {
   text-align: right;
   font-weight: 600;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 
@@ -469,13 +499,13 @@ blockquote {
 /* Button */
 .btn {
   border-radius: 0px;
-  padding: 10px 30px;
-  font-weight: 600;
-  text-transform: uppercase;
+  /* padding: 10px 30px;
+  font-weight: 600; */
+  /* text-transform: uppercase; */
   color: #fff;
   transition: 350ms;
   letter-spacing: 1px;
-  font-size: 13px;
+  font-size: 0.8rem;
   border: 1px solid transparent;
 }
 
@@ -486,6 +516,18 @@ blockquote {
   background: #000;
   color: #fff;
   border-color: #000;
+}
+.btn:disabled {
+  background-color: grey;
+  border: none;
+  color: #666666
+}
+#savelook-button:focus {
+  outline: none;
+  box-shadow: none;
+  background: #ce8460;
+  border: none;
+  transition: all 2s ease-in-out;
 }
 
 .btn-dark {
@@ -649,7 +691,8 @@ blockquote {
   color: rgba(0, 0, 0, 0.7);
 }
 
-.search a {
+.search a,
+#details {
   color: #000;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.7);
@@ -931,7 +974,11 @@ overlay search
 }
 
 .header-top {
-  position: relative !important;
+  /* position: relative !important; */
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: 1px solid rgb(199, 195, 195);
 }
 
 .navigation-dark .navbar-toggler span {
