--- a/public/style.css
+++ b/public/style.css
@@ -978,7 +978,8 @@ overlay search
   position: fixed;
   top: 0;
   width: 100%;
-  border-bottom: 1px solid rgb(199, 195, 195);
+  /* border-bottom: 1px solid rgb(199, 195, 195); */
+  background-color: transparent;
 }
 
 .navigation-dark .navbar-toggler span {
